--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
+env:
+  - CI=1
 language: ruby
-gemfile: gemfiles/Gemfile.travis
+bundler_args: --without development debug profile
 rvm:
   - 2.1.5
   - 2.2.1
-script: bundle exec rake test
+script: script/ci
